--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <li>Performed testing and debugging.</li>
         <li>Collaborated with the design team to improve the user interface.</li>
     </ul>
-
+<!-- Heading -->
     <h2>Skills</h2>
     <p><b>Programming Languages:</b> Java, Python, JavaScript</p>
     <p><b>Frameworks:</b> React, Angular, Django</p>
